--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
-    
+    <nav>
+        <header>
+            <div class="logo-icon"></div>
+        </header>
+
+        <section class="nav-container">
+            <a class="nav-item">Home</a>
+            <a class="nav-item">Our Package</a>
+            <a class="nav-item">Call Us</a>
+        </section>
+    </nav>
+
+     <main>
+        <article style="text-align: center; padding-block: 20px;">
+            <header>
+                <h1 style="margin-bottom: 16px;">Your Trusted Travel Agent</h1>
+            </header>
+
+            <p>Your happiness is our happiness.</p>
+        </article>
+
+        <section class="main-content">
+            <article class="main-content-item">
+                <div class="main-content-banner"></div>
+                <div class="main-content-banner-capt">
+                    <p style="font-style: italic;">"Liburan jadi menyenangkan bersama Travel Agentku."</p> 
+                </div>
+                <div class="main-content-desc">    
+                    <div class="item-icon"></div>
+                    <div>
+                        <h3>Florence Hughes</h3>
+                        <p style="font-style: italic; padding-left: 10px;">
+                            Ibu Rumah Tangga, 28
+                        </p>
+                    </div>
+                </div>
+                </article>
+
+            <form class="main-content-form">
+
+            </form>
+        </section>
+     </main>
 </body>
 </html>
